--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "moment": "^2.29.4",
     "ng2-currency-mask": "^13.0.3",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
